Update FaultInjectionWithAvailabilityStrategyTests.java